# simple_allocator

./: .travis.yml  CMakeLists.txt  LICENSE  README.md  allocator_usage.cpp  conanfile.txt
allocator_lib/: CMakeLists.txt  logging_allocator.cpp
allocator_lib/include/: logging_allocator.h  simple_allocator.h
container_lib/: CMakeLists.txt
container_lib/include/: SimpleList.h
